--- a/spring-demo/spring-rabbitmq-demo/pom.xml
+++ b/spring-demo/spring-rabbitmq-demo/pom.xml
@@ -21,4 +21,16 @@
         <module>spring-rabbitmq-producer</module>
         <module>spring-rabbitmq-consumer</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.example.demo.core</groupId>
+            <artifactId>spring-demo-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+    </dependencies>
 </project>
