--- a/spring-demo/spring-rocketmq-demo/pom.xml
+++ b/spring-demo/spring-rocketmq-demo/pom.xml
@@ -12,12 +12,22 @@
     <groupId>com.example.demo.rocketmq</groupId>
     <artifactId>spring-rocketmq-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <name>spring-rocketmq-demo</name>
-    <description>spring-rocketmq-demo</description>
+    <description>Spring Rocketmq Demo</description>
+
+    <modules>
+        <module>spring-rocketmq-producer</module>
+        <module>spring-rocketmq-consumer</module>
+    </modules>
 
     <dependencies>
+        <dependency>
+            <groupId>com.example.demo.core</groupId>
+            <artifactId>spring-demo-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.rocketmq/rocketmq-spring-boot-starter -->
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
